--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
     namespace 'com.mayberry.recipedemo'
     compileSdk 32
 
+    buildFeatures {
+        viewBinding true
+        dataBinding true
+    }
     defaultConfig {
         applicationId "com.mayberry.recipedemo"
         minSdk 21
@@ -41,4 +46,20 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.7'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //coroutine
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
+    //ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-alpha05")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.4.1")
+    implementation "androidx.activity:activity-ktx:1.4.0"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
+    //navigation
+    implementation("androidx.navigation:navigation-fragment-ktx:2.4.0")
+    implementation("androidx.navigation:navigation-ui-ktx:2.4.0")
 }
