--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -62,4 +63,10 @@ dependencies {
     //navigation
     implementation("androidx.navigation:navigation-fragment-ktx:2.4.0")
     implementation("androidx.navigation:navigation-ui-ktx:2.4.0")
+    //shimmerRecyclerView
+    implementation'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+
 }
