初步搭建收藏界面，更新应用图标

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,7 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation("androidx.room:room-runtime:$room_version")
+    //Jsoup
+    implementation 'org.jsoup:jsoup:1.16.1'
 
 }
